--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -1368,6 +1368,348 @@
     "display(df.isnull().sum())\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Children\n",
+       "0.0     1042\n",
+       "1.0      180\n",
+       "2.0      534\n",
+       "3.0      459\n",
+       "4.0      232\n",
+       "5.0      106\n",
+       "6.0       39\n",
+       "7.0       23\n",
+       "8.0        8\n",
+       "9.0        3\n",
+       "10.0       8\n",
+       "11.0       2\n",
+       "14.0       1\n",
+       "15.0       1\n",
+       "22.0       1\n",
+       "23.0       1\n",
+       "Name: Children, dtype: int64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['Children'])['Children'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Residence\n",
+       "A Coruña, Spain             1\n",
+       "Aarhus, Denmark             1\n",
+       "Abbeville, Alabama          1\n",
+       "Aberdeen, United Kingdom    1\n",
+       "Aberdyfi, United Kingdom    1\n",
+       "                           ..\n",
+       "Zug, Switzerland            6\n",
+       "Zurich, Switzerland         9\n",
+       "error                       1\n",
+       "foshan, China               1\n",
+       "torino, Italy               1\n",
+       "Name: Residence, Length: 780, dtype: int64"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['Residence'])['Residence'].count().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>net_worth</th>\n",
+       "      <th>country</th>\n",
+       "      <th>source</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Residence</th>\n",
+       "      <th>Citizenship</th>\n",
+       "      <th>Marital Status</th>\n",
+       "      <th>Children</th>\n",
+       "      <th>Bachelor</th>\n",
+       "      <th>Master</th>\n",
+       "      <th>Doctorate</th>\n",
+       "      <th>Drop Out</th>\n",
+       "      <th>Self Made</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>forbes_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [net_worth, country, source, industry, Age, Residence, Citizenship, Marital Status, Children, Bachelor, Master, Doctorate, Drop Out, Self Made]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df['Residence'].str.replace('error',df['Citizenship'])\n",
+    "df['Residence'][df['Residence'] == 'error'] = 'Taiwan'\n",
+    "df[df['Residence'] == 'error']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>net_worth</th>\n",
+       "      <th>country</th>\n",
+       "      <th>source</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Residence</th>\n",
+       "      <th>Citizenship</th>\n",
+       "      <th>Marital Status</th>\n",
+       "      <th>Children</th>\n",
+       "      <th>Bachelor</th>\n",
+       "      <th>Master</th>\n",
+       "      <th>Doctorate</th>\n",
+       "      <th>Drop Out</th>\n",
+       "      <th>Self Made</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>forbes_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bernard-arnault</th>\n",
+       "      <td>211.0</td>\n",
+       "      <td>France</td>\n",
+       "      <td>LVMH</td>\n",
+       "      <td>Fashion &amp; Retail</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>Paris, France</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Married</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>elon-musk</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Tesla, SpaceX</td>\n",
+       "      <td>Automotive</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>Austin, Texas</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>jeff-bezos</th>\n",
+       "      <td>114.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Amazon</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>Medina, Washington</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Engaged</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>larry-ellison</th>\n",
+       "      <td>107.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Oracle</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>Lanai, Hawaii</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>In Relationship</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>warren-buffett</th>\n",
+       "      <td>106.0</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Berkshire Hathaway</td>\n",
+       "      <td>Finance &amp; Investments</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>Omaha, Nebraska</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Widowed, Remarried</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 net_worth        country              source  \\\n",
+       "forbes_id                                                       \n",
+       "bernard-arnault      211.0         France                LVMH   \n",
+       "elon-musk            180.0  United States       Tesla, SpaceX   \n",
+       "jeff-bezos           114.0  United States              Amazon   \n",
+       "larry-ellison        107.0  United States              Oracle   \n",
+       "warren-buffett       106.0  United States  Berkshire Hathaway   \n",
+       "\n",
+       "                              industry   Age           Residence  \\\n",
+       "forbes_id                                                          \n",
+       "bernard-arnault       Fashion & Retail  74.0       Paris, France   \n",
+       "elon-musk                   Automotive  52.0       Austin, Texas   \n",
+       "jeff-bezos                  Technology  59.0  Medina, Washington   \n",
+       "larry-ellison               Technology  79.0       Lanai, Hawaii   \n",
+       "warren-buffett   Finance & Investments  92.0     Omaha, Nebraska   \n",
+       "\n",
+       "                   Citizenship      Marital Status  Children  Bachelor  \\\n",
+       "forbes_id                                                                \n",
+       "bernard-arnault         France             Married       5.0       1.0   \n",
+       "elon-musk        United States              Single      10.0       1.0   \n",
+       "jeff-bezos       United States             Engaged       4.0       1.0   \n",
+       "larry-ellison    United States     In Relationship       4.0       0.0   \n",
+       "warren-buffett   United States  Widowed, Remarried       3.0       1.0   \n",
+       "\n",
+       "                 Master  Doctorate  Drop Out  Self Made  \n",
+       "forbes_id                                                \n",
+       "bernard-arnault     0.0        0.0       0.0          0  \n",
+       "elon-musk           0.0        0.0       0.0          1  \n",
+       "jeff-bezos          0.0        0.0       0.0          1  \n",
+       "larry-ellison       0.0        0.0       1.0          1  \n",
+       "warren-buffett      1.0        0.0       0.0          1  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
