Committing James' changes for pull request into main.

--- a/main.ipynb
+++ b/main.ipynb
@@ -3211,14 +3211,243 @@
    "id": "338beba01e0e3a42"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "# Box Plots"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "7884eb98206a3f76"
+   "id": "268aac0f95b0aad2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Highlighting the bias of billionaires in this sample denoting the need for removal of outliers\n",
+    "plt.figure(figsize=(10,2))\n",
+    "sns.set_style('white')\n",
+    "all_nw = sns.boxplot(data = df, x = 'net_worth',color='maroon')\n",
+    "all_nw.set_title('All Billionaires')\n",
+    "all_nw.set_xlabel('Net Worth (billions)')\n",
+    "plt.text(200,-.1,'Arnault')\n",
+    "plt.text(172,-.1,'Musk')\n",
+    "plt.text(108,-.1,'Bezos')\n",
+    "\n",
+    "\n",
+    "# 75th percentile of billionaires \n",
+    "df['net_worth'].quantile([.75])"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "333e33535a353873"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Seperating the data into 75th percentile and top 25%\n",
+    "new_df = df[df['net_worth']<=4.2]\n",
+    "top_25 = df[df['net_worth']>4.2]\n",
+    "\n",
+    "#Plotting 75th percentile of billionaires\n",
+    "plt.figure(figsize=(10,2))\n",
+    "sns.set_style('white')\n",
+    "all_nw = sns.boxplot(data = new_df, x = 'net_worth',color='maroon')\n",
+    "all_nw.set_title('Exlusion of Top 25% of Billionaires')\n",
+    "all_nw.set_xlabel('Net Worth (billions)')\n",
+    "\n",
+    "new_df.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6a87133ff240998f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Verifying number of billionaires left in stratified data\n",
+    "new_df['Self Made'].value_counts()\n",
+    "\n",
+    "#Creating new subdata set for only self made billionaires within the 75th percentile\n",
+    "self_df = new_df[new_df['Self Made']==1]\n",
+    "self_df.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "17edadde8417ee85"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Calculate the counts for each education level within the 75% percentile of billionaires\n",
+    "education_counts = self_df[['Bachelor', 'Master', 'Doctorate', 'Drop Out']].sum()\n",
+    "print(education_counts)\n",
+    "# Create a bar plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=education_counts.index, y=education_counts.values, palette = \"viridis\")\n",
+    "plt.title('75th percentile Self-made Billionaires', fontsize=16, fontweight='bold')\n",
+    "plt.xlabel('Education Level', fontsize = 16, fontweight = \"bold\")\n",
+    "plt.ylabel('Number of Billionaires', fontsize = 16, fontweight = \"bold\")\n",
+    "\n",
+    "# Display the counts on top of the bars\n",
+    "for i, count in enumerate(education_counts.values):\n",
+    "    plt.text(i, count, str(count), ha='center', va='bottom')\n",
+    "\n",
+    "# Rotate x-axis labels for better readability\n",
+    "plt.xticks(rotation=0)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "1daf3efc31686e3c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Calculate the counts for each education level within the 75% percentile of billionaires\n",
+    "education_counts = top_25[['Bachelor', 'Master', 'Doctorate', 'Drop Out']].sum()\n",
+    "print(education_counts)\n",
+    "# Create a bar plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=education_counts.index, y=education_counts.values, palette = \"viridis\")\n",
+    "plt.title('Billionaires by Education Level', fontsize=16, fontweight='bold')\n",
+    "plt.xlabel('Education Level', fontsize = 16, fontweight = \"bold\")\n",
+    "plt.ylabel('Number of Billionaires', fontsize = 16, fontweight = \"bold\")\n",
+    "\n",
+    "# Display the counts on top of the bars\n",
+    "for i, count in enumerate(education_counts.values):\n",
+    "    plt.text(i, count, str(count), ha='center', va='bottom')\n",
+    "\n",
+    "# Rotate x-axis labels for better readability\n",
+    "plt.xticks(rotation=0)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "45d0724fea5ce92c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tech_df = pd.DataFrame(self_df[self_df['industry']=='Technology'])\n",
+    "tech_df.info()\n",
+    "\n",
+    "gamble_df = self_df[self_df['industry']=='Gambling & Casinos']\n",
+    "gamble_df.info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "65a9aa54e2c3e424"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Calculate the counts for each education level\n",
+    "education_counts = tech_df[['Bachelor', 'Master', 'Doctorate', 'Drop Out']].sum()\n",
+    "print(education_counts)\n",
+    "# Create a bar plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=education_counts.index, y=education_counts.values, palette = \"viridis\")\n",
+    "plt.title('75th percentile Self-made Billionaires in Tech', fontsize=16, fontweight='bold')\n",
+    "plt.xlabel('Education Level', fontsize = 16, fontweight = \"bold\")\n",
+    "plt.ylabel('Number of Billionaires', fontsize = 16, fontweight = \"bold\")\n",
+    "\n",
+    "# Display the counts on top of the bars\n",
+    "for i, count in enumerate(education_counts.values):\n",
+    "    plt.text(i, count, str(count), ha='center', va='bottom')\n",
+    "\n",
+    "# Rotate x-axis labels for better readability\n",
+    "plt.xticks(rotation=0)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4d68ba3e137b8172"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Calculate the counts for each education level\n",
+    "ed_count = gamble_df[['Bachelor', 'Master', 'Doctorate', 'Drop Out']].sum()\n",
+    "print(ed_count)\n",
+    "# Create a bar plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=ed_count.index, y=ed_count.values, palette = \"viridis\")\n",
+    "plt.title('75th percentile Self-made Billionaires in Tech', fontsize=16, fontweight='bold')\n",
+    "plt.xlabel('Education Level', fontsize = 16, fontweight = \"bold\")\n",
+    "plt.ylabel('Number of Billionaires', fontsize = 16, fontweight = \"bold\")\n",
+    "\n",
+    "# Display the counts on top of the bars\n",
+    "for i, count in enumerate(ed_count.values):\n",
+    "    plt.text(i, count, str(count), ha='center', va='bottom')\n",
+    "\n",
+    "# Rotate x-axis labels for better readability\n",
+    "plt.xticks(rotation=0)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c0184712afc12f6b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Net worth by industry for selfmade billionaires within the 75th percentile \n",
+    "# Bar plots are organized in decreasing order of frequncy\n",
+    "sns.set_theme()\n",
+    "sns.set_style('white')\n",
+    "ind_counts = pd.DataFrame(self_df['industry'].value_counts())\n",
+    "ind = sns.boxplot(\n",
+    "    data = self_df,\n",
+    "    y='industry',\n",
+    "    x= 'net_worth',\n",
+    "    width=0.6,\n",
+    "    order=ind_counts.index)\n",
+    "ind.set_xlabel('Net Worth (billions)')\n",
+    "ind.set_ylabel('')\n",
+    "ind.set_title('Top Industries for Self-made Billionaires within 75th Percentile')\n",
+    "\n",
+    "# Added veritcal line for the median Net Worth for all billionaires in the 75th percentile\n",
+    "# Allowing for comparison of industries before better or worse than an average\n",
+    "ind.axvline(x=self_df['net_worth'].median())"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7077c61793aa3612"
   }
  ],
  "metadata": {
