Adding Kat's changes for pull request.

--- a/main.ipynb
+++ b/main.ipynb
@@ -39,7 +39,9 @@
     "import statsmodels.api as sm\n",
     "\n",
     "import plotly.express as px\n",
-    "import plotly.io as pio\n"
+    "import plotly.io as pio\n",
+    "\n",
+    "import missingno as msno\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -52,28 +54,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[31mERROR: Could not find a version that satisfies the requirement plotly-orca (from versions: none)\u001B[0m\u001B[31m\r\n",
-      "\u001B[0m\u001B[31mERROR: No matching distribution found for plotly-orca\u001B[0m\u001B[31m\r\n",
-      "\u001B[0mRequirement already satisfied: kaleido in /Users/nicksartino/anaconda3/envs/Jupyter/lib/python3.11/site-packages (0.2.1)\r\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "# Comment out if not needed - used briefly to export png images from bar graphs.\n",
-    "!pip install plotly-orca\n",
-    "!pip install -U kaleido"
+    "#!pip install plotly-orca\n",
+    "#!pip install -U kaleido"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-06T03:16:48.359385Z",
-     "start_time": "2023-11-06T03:16:44.128098Z"
+     "end_time": "2023-11-07T04:19:41.049010Z",
+     "start_time": "2023-11-07T04:19:41.026168Z"
     }
    },
    "id": "3f52d44835ea8e28"
@@ -94,6 +86,16 @@
     "\n",
     "df = pd.read_csv('forbes_2640_billionaires.csv', index_col = 0, header = 0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Exploratory Data Analysis and Data Cleansing"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "917403e2b8eb57ed"
   },
   {
    "cell_type": "code",
@@ -150,6 +152,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Rank and Name are not valuable for analysis.\n",
+    "# Source of Wealth is similar to Souce and is missing a value.\n",
+    "# Self-Made Score and Philanthropy Score are largly null without any description to be able to calculate them.\n",
+    "# age_range is undefined from the source.\n",
+    "# age was the age when the data was created. Age is the age on the Forbes profile. Keeping the Forbes defined age as it will most closely align with the other data from Forbes.\n",
+    "df_clean = df.drop(columns=['rank','name','Source of Wealth','Self-Made Score','Philanthropy Score','Education','age_range','age'],inplace=True)\n",
+    "\n",
+    "df_clean"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5adb71f1274bbe2b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Visualize missing values\n",
+    "\n",
+    "msno.matrix(df_clean)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9c405982b28cd7cf"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_clean[df_clean['Residence'].isnull()].head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a34bcb640b8f5c93"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_clean.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "816ad799222c72da"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#Finding the mean of the column having NaN \n",
+    "mean_value=df_clean['Age'].mean() \n",
+    "\n",
+    "# Replace NaNs in column Age with the \n",
+    "# mean of values in the same column \n",
+    "df_clean['Age'].fillna(value=mean_value, inplace=True)\n",
+    "\n",
+    "df_clean.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e4efcc36d9fe595a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_clean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# Replace NaNs in column Citizenship with the \u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m# country of work. \u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m df_clean[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mCitizenship\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mfillna(value\u001B[38;5;241m=\u001B[39mdf[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcountry\u001B[39m\u001B[38;5;124m'\u001B[39m], inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m      4\u001B[0m df[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mMarital Status\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mfillna(value\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mUnknown\u001B[39m\u001B[38;5;124m'\u001B[39m, inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[1;32m      5\u001B[0m df[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mResidence\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mfillna(value\u001B[38;5;241m=\u001B[39mdf[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mcountry\u001B[39m\u001B[38;5;124m'\u001B[39m], inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'df_clean' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Replace NaNs in column Citizenship with the \n",
+    "# country of work. \n",
+    "df_clean['Citizenship'].fillna(value=df['country'], inplace=True)\n",
+    "df_clean['Marital Status'].fillna(value='Unknown', inplace=True)\n",
+    "df_clean['Residence'].fillna(value=df['country'], inplace=True)\n",
+    "df_clean['Children'].fillna(value=0, inplace=True)\n",
+    "df_clean['Bachelor'].fillna(value=0, inplace=True)\n",
+    "df_clean['Master'].fillna(value=0, inplace=True)\n",
+    "df_clean['Doctorate'].fillna(value=0, inplace=True)\n",
+    "df_clean['Drop Out'].fillna(value=0, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-07T04:22:17.675826Z",
+     "start_time": "2023-11-07T04:22:16.864663Z"
+    }
+   },
+   "id": "9611212905b7f005"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "display(df_clean.isnull().sum())\n",
+    "df_clean.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a1e0157442f70ce1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_clean.groupby(['Children'])['Children'].count()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "682fcb2391b2f349"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_clean.groupby(['Residence'])['Residence'].count().sort_values()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9d58c5904e7bc"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# df['Residence'].str.replace('error',df['Citizenship'])\n",
+    "df_clean['Residence'][df_clean['Residence'] == 'error'] = 'Taiwan'\n",
+    "df_clean[df_clean['Residence'] == 'error']"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3383e23bf48f925f"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df_clean.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8e32610f95c94875"
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "8f4cce54",
    "metadata": {
@@ -172,7 +350,7 @@
    "source": [
     "# Preview data\n",
     "\n",
-    "df.head()"
+    "df_clean.head()"
    ]
   },
   {
@@ -1680,7 +1858,7 @@
     ")\n",
     "\n",
     "# Save plot as .png file\n",
-    "pio.write_image(country_pie, 'Country_Pie_Chart.png', format='png')"
+    "#pio.write_image(country_pie, 'Country_Pie_Chart.png', format='png')"
    ],
    "metadata": {
     "collapsed": false,
@@ -2593,7 +2771,7 @@
     ")\n",
     "\n",
     "# Save plot as .png file\n",
-    "pio.write_image(industry_pie, 'Industry_Pie_Chart.png', format='png')"
+    "#pio.write_image(industry_pie, 'Industry_Pie_Chart.png', format='png')"
    ],
    "metadata": {
     "collapsed": false,
@@ -2666,7 +2844,7 @@
    "outputs": [],
    "source": [
     "# First - Create a copy of df to use for the statistical analysis.\n",
-    "df_stats = df"
+    "df_stats = df_clean"
    ],
    "metadata": {
     "collapsed": false,
